[gd_scene load_steps=8 format=2]

[ext_resource path="res://elements/GameBig.gd" type="Script" id=1]
[ext_resource path="res://menu.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/GameBig.tres" type="DynamicFont" id=3]
[ext_resource path="res://Samples/gameCover.png" type="Texture" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 1.4013e-45, 0.293413, 0.784431 )
colors = PoolColorArray( 0.0980392, 0.458824, 0.172549, 1, 0.054902, 0.227451, 0.117647, 1, 0.0431373, 0.262745, 0.0627451, 1, 0.580392, 0.662745, 0.447059, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 40

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ) ]
}

[node name="GameBig" type="Control"]
margin_left = -100.0
margin_top = -123.0
margin_right = 275.0
margin_bottom = 377.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 375, 500 )
rect_pivot_offset = Vector2( 179.412, 269.062 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="shadow" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.152941 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.05338
margin_top = 9.56671
margin_right = 8.05338
margin_bottom = 9.56671

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -111.0
margin_top = 10.0
margin_right = 44.0
margin_bottom = 9.0
rect_rotation = -89.9999
rect_pivot_offset = Vector2( 263.781, 255.351 )
texture = SubResource( 2 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -171.5
margin_top = 116.0
margin_right = 171.5
margin_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Company" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
text = "Company"
align = 1
valign = 1
uppercase = true

[node name="Cover" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/mouseover = SubResource( 3 )
[connection signal="gui_input" from="." to="." method="_on_GameBig_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_GameBig_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GameBig_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_GameBig_visibility_changed"]
